hphp/hack/test/typecheck/missing_tparam5.php.exp
File "missing_tparam5.php", line 6, characters 12-14:
The type Foo expects 1 type parameter(s) (Typing[4101])
File "missing_tparam5.php", line 3, characters 9-11:
Definition is here
